--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <section id="landing">
@@ -92,6 +92,6 @@
             <a href="#" class="login">HALAMAN SELANJUTNYA GUYSSS</a>
         </div>
     </section>
-    <script src="home.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
