--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <h1>CONTACT</h1>
             <hr>
             <i class="fa">&#xf232;</i>
-            <a href="" class="wa">081214293362</a>
+            <a href="wa.me/6281214293362" class="wa">081214293362</a>
             <a href="#" class="login">HALAMAN SELANJUTNYA GUYSSS</a>
         </div>
     </section>
